Added ability to check out players by position

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -57,7 +57,17 @@ table, th, td {
         <input type="text" id="save" name="save" value="0.3"><br><br>
         <label for="so">Shutouts</label><br>
         <input type="text" id="so" name="so" value="3.0"><br><br>
-        <br> 
+        <h3>Positions</h3>
+        <select id="positions" name="positions">
+            <option value="all">All Players</option>
+            <option value="skater">Skaters</option>
+            <option value="forward">Forwards</option>
+            <option value="left">Left Wings</option>
+            <option value="center">Centers</option>
+            <option value="right">Right Wings</option>
+            <option value="defense">Defensemen</option>
+            <option value="goalie">Goaltenders</option>
+          </select>
     </div>
 </div>
 <input type="submit" value="Calculate Last Season's Results">
