--- a/server/templates/tableStyles.html
+++ b/server/templates/tableStyles.html
@@ -1,15 +1,18 @@
 table {
-  overflow: hidden;
   border: 2px solid powderblue;
 }
-
-tr:hover {
-  background-color: #ffa;
-}
+/*Alternating coloured rows for readability*/
+tr:nth-child(even) {background: #CCC}
+tr:nth-child(odd) {background: #FFF}
 
 td, th {
   border: 2px solid powderblue;
   position: relative;
+}
+
+/*Highlight the row that you're hovering over*/
+tr:hover {
+    background-color: #ffa;
 }
 
 td:hover::after,
@@ -18,8 +21,8 @@ th:hover::after {
   position: absolute;
   background-color: #ffa;
   left: 0;
-  top: -500px;
-  height: 1000px;
+  /*top: -500px;
+  height: 1000px;*/
   width: 100%;
   z-index: -1;
 }
