Created a bit more customization for plots based on situation

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -36,8 +36,8 @@ form {
 </head>
 <body>
 <script src="../apiInterface.py"></script>
-<h1>Season Seer</h1>
-<h2>Look forward to your next fantasy season!</h2>
+<h1 style="text-align:center;">Season Seer</h1>
+<h2 style="text-align:center;">Look forward to your next fantasy season!</h2>
 <form action="/my-link/" target="_blank">
 <div class="row">
     <div class="column">
