Changed the names of categories on index page to match APi categories

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -48,28 +48,28 @@ form {
         <input type="text" id="assists" name="assists" value="2.0"><br><br>
         <label for="pim">Penalty Minutes</label><br>
         <input type="text" id="pim" name="pim" value="-0.5"><br><br>
-        <label for="ppp">Powerplay Points</label><br>
-        <input type="text" id="ppp" name="ppp" value="1.0"><br><br>
-        <label for="shp">Shorthanded points</label><br>
-        <input type="text" id="shp" name="shp" value="1.0"><br><br>
-        <label for="sog">Shots on Goal</label><br>
-        <input type="text" id="sog" name="sog" value="0.5"><br><br>
-        <label for="hit">Hits</label><br>
-        <input type="text" id="hit" name="hit" value="0.5"><br><br>
-        <label for="blk">Blocks</label><br>
-        <input type="text" id="blk" name="blk" value="0.5"><br><br>
+        <label for="powerPlayPoints">Powerplay Points</label><br>
+        <input type="text" id="powerPlayPoints" name="powerPlayPoints" value="1.0"><br><br>
+        <label for="shortHandedPoints">Shorthanded points</label><br>
+        <input type="text" id="shortHandedPoints" name="shortHandedPoints" value="1.0"><br><br>
+        <label for="shots">Shots on Goal</label><br>
+        <input type="text" id="shots" name="shots" value="0.5"><br><br>
+        <label for="hits">Hits</label><br>
+        <input type="text" id="hits" name="hits" value="0.5"><br><br>
+        <label for="blocked">Blocks</label><br>
+        <input type="text" id="blocked" name="blocked" value="0.5"><br><br>
         <br> 
     </div>
     <div class="column">
         <h3>Goalies</h3>
-        <label for="win">Wins</label><br>
-        <input type="text" id="win" name="win" value="2.0"><br><br>
-        <label for="ga">Goals Against</label><br>
-        <input type="text" id="ga" name="ga" value="-1.0"><br><br>
-        <label for="save">Saves</label><br>
-        <input type="text" id="save" name="save" value="0.3"><br><br>
-        <label for="so">Shutouts</label><br>
-        <input type="text" id="so" name="so" value="3.0"><br><br>
+        <label for="wins">Wins</label><br>
+        <input type="text" id="wins" name="wins" value="2.0"><br><br>
+        <label for="goalsAgainst">Goals Against</label><br>
+        <input type="text" id="goalsAgainst" name="goalsAgainst" value="-1.0"><br><br>
+        <label for="saves">Saves</label><br>
+        <input type="text" id="saves" name="saves" value="0.3"><br><br>
+        <label for="shutouts">Shutouts</label><br>
+        <input type="text" id="shutouts" name="shutouts" value="3.0"><br><br>
         <h3>Positions</h3>
         <select id="positions" name="positions">
             <option value="all">All Players</option>
